main/static/css/custom.css
/* ... */
@media (max-width: 440px) {
    .imagem-container {
        width: 100%;
    }
}

/*  */

.text-ornament.subtitle {
    background-size: 1300px;
    font-size: 20px;
    margin-top: 50px;
    background-image: url(../img/ornaments/serenity/bgname.png);
}

.celebrate h4 {
    text-align: center;
    margin: 0;
}

.card-letter {
    font-size: 26px;
    white-space: nowrap;
    margin: 47px 0;
}

.card-title {
    font-size: 45px;
    text-transform: uppercase;
    margin-bottom: 60px;
}

.grooms-name {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-font-smoothing: antialiased;
    box-sizing: border-box;
    line-height: 1.1;
    font-size: 30px;
    letter-spacing: 1.2px;
    margin: 30px 0px;
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    font-weight: 800;
    padding: 15px;
    color: #fff;
    text-shadow: 0px 1px 9px rgba(102, 98, 98, 0.36);
    background-repeat: no-repeat;
    background-position: center;
    background-image: url(../img/ornaments/serenity/bgname.png);
}

@media (max-width: 600px) {
    .text-ornament.subtitle {
        background-image: url(../img/ornaments/serenity/bgname.png);
        margin-top: 10px;
        font-size: 13px;
    }

    .grooms-name {
        font-size: 22px;
        padding: 9px;
        margin: 8px 8px;
    }

    .queridos-convidados-body {
        flex-wrap: nowrap;
    }

    .couple-person {
        flex-basis: 50%;
    }

    #about .img-container {
        height: 125px;
        width: 125px;
    }

    .invite-text {
        margin: 0;
        width: 100%;
        max-width: none;
        min-width: 0;
        padding: 0;
        font-size: 18px;
    }

    .cerimony-text {
        background: #f2f7ff;
        padding: 20px;
        color: #376878;
    }
}

/* O Evento */
.celebrate-box {
    background: #fff;
    padding: 20px;
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
    border-radius: 8px;
    margin: 20px 0;
    transform: rotate(-4deg); /* Adiciona rotação */
    box-shadow: 0 3px 6px rgba(0, 0, 0, .25); /* Sombra */
    border: 8px solid #fff; /* Borda */
}

.celebrate-box h4 {
    margin-bottom: 15px;
    font-size: 24px;
    color: #376878;
}

.celebrate-box .event-details {
    font-size: 16px;
    color: #555;
    line-height: 1.5;
}

.celebrate-box .event-details strong {
    font-weight: 700;
    color: #376878;
}

.img-photo {
    margin-bottom: 20px; /* Garantir espaço suficiente entre a imagem e o mapa */
}

iframe {
    margin-top: 20px; /* Garantir espaço suficiente entre a imagem e o mapa */
}

/* Ajustes de layout responsivo */
@media (max-width: 767px) {
    .row.d-flex {
        display: flex !important;
        flex-direction: column-reverse !important;
    }

    .celebrate-box {
        margin: 20px auto;
    }

    iframe {
        padding: 0 10px; /* Adiciona padding nas laterais do iframe para dispositivos móveis */
        box-sizing: border-box;
    }

    .section-heading h2 {
        font-size: 2em; /* Tamanho da fonte ajustado para a versão mobile */
    }

    .section-heading .hr {
        height: 3px;
    }
}

/* Estilo para o contêiner com o botão de confirmar presença */
.confirm-presence {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-top: 20px;
}

/* Adicionar margem superior na seção Copo de Água */
.mt-5 {
    margin-top: 5rem !important;
}

/* Estilos para evitar overflow lateral */
body, html {
    overflow-x: hidden;
}

.container, .container-fluid, .row {
    max-width: 100%;
    padding-right: 0;
    padding-left: 0;
}

/* Ajustes de layout e espaçamento */
.container {
    padding-left: 15px;
    padding-right: 15px;
}

#guests .guest {
    margin-bottom: 20px;
}

#guests .img-circle {
    width: 100px;
    height: 100px;
    margin-bottom: 10px;
}

#guests .lead {
    margin-top: 20px;
    padding: 0 15px; /* Adiciona padding nas laterais para dispositivos móveis */
    text-align: center;
}

@media (max-width: 767px) {
    .container {
        padding-left: 15px;
        padding-right: 15px;
        margin-right: 0;
        margin-left: 0;
        overflow-x: hidden;
    }
}

/* Estilos gerais */
body, html {
    overflow-x: hidden;
}

.container {
    padding-left: 15px;
    padding-right: 15px;
}

#guests .guest {
    margin-bottom: 20px;
}

#guests .img-circle {
    width: 100px;
    height: 100px;
    margin-bottom: 10px;
}

#guests .lead {
    margin-top: 20px;
    padding: 0 15px; /* Adiciona padding nas laterais para dispositivos móveis */
    text-align: center;
}

/* Ajustes específicos para evitar overflow lateral */
.img-photo, .celebrate-box {
    max-width: 100%;
}

iframe {
    width: 100%;
    padding: 0 10px; /* Adiciona padding nas laterais do iframe para dispositivos móveis */
    box-sizing: border-box; /* Garante que o padding seja incluído na largura total */
}

.section-heading h2 {
    font-size: 2.5em; /* Tamanho da fonte ajustado para a versão desktop */
}

/* Ajustes de layout responsivo */
@media (max-width: 767px) {
    .row {
        margin-left: auto;
        margin-right: auto;
    }

    .row.d-flex {
        display: flex !important;
        flex-direction: column-reverse !important;
    }

    .celebrate-box {
        margin: 20px auto;
    }

    iframe {
        padding: 0 10px;
        box-sizing: border-box;
    }

    .section-heading h2 {
        font-size: 2em; /* Tamanho da fonte ajustado para a versão mobile */
    }
}

/* Estilo para o contêiner com o botão de confirmar presença */
.confirm-presence {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    margin-top: 20px;
}

/* Floating label styles */
.form-group {
    position: relative;
    margin-bottom: 1.5em;
    text-align: center;
}
/* ... */

